Fixed deprecated numeric (boxed) constructors