@@ -37,7 +37,7 @@ public class EcoBugsTypeTranslationTest {
         EcoBugs source = new EcoBugs();
         source.setCode(1d);
         translationService.translateValues(source);
-        assertEquals(new Double(10d), source.getCode());
+        assertEquals(Double.valueOf(10d), source.getCode());
     }
 
     private void createAndSaveTypeTranslation(
