@@ -37,7 +37,7 @@ public class EcoKochTypeTranslationTest {
         EcoKoch source = new EcoKoch();
         source.setCode(1d);
         translationService.translateValues(source);
-        assertEquals(new Double(10d), source.getCode());
+        assertEquals(Double.valueOf(10d), source.getCode());
     }
 
     private void createAndSaveTypeTranslation(
