@@ -36,7 +36,7 @@ public class SpeciesKeysTypeTranslationTest {
         Keys source = new Keys();
         source.setCode(1d);
         translationService.translateValues(source);
-        assertEquals(new Double(10d), source.getCode());
+        assertEquals(Double.valueOf(10d), source.getCode());
     }
 
     private void createAndSaveTypeTranslation(
